atualização/correção menu não tomando a janela toda em telas pequenas

--- a/src/views/agenda.ejs
+++ b/src/views/agenda.ejs
@@ -18,7 +18,7 @@
   <div id=contain-main>
 
     <div id="contain-menu">
-      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand">Agenda de contatos</a>
         <% if(user == "" || user == undefined) { %>
           <ul class="navbar-nav ml-auto">
